Move js to JS Folder

--- a/v-if-else.html
+++ b/v-if-else.html
@@ -25,5 +25,5 @@
   </div>
 </body>
 <script src="https://unpkg.com/vue@next"></script>
-<script src="./v-if-else.js"></script>
+<script src="./js/v-if-else.js"></script>
 </html>
