--- a/index.html
+++ b/index.html
@@ -59,5 +59,5 @@
   </div>
 </body>
 <script src="https://unpkg.com/vue@next"></script>
-<script src="./v-model.js"></script>
+<script src="./js/v-model.js"></script>
 </html>
